# MultigridMC

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  measurements_template.cfg  parameters_template.cfg
.github/workflows/: automated_testing.yml
cmake/: FindCholMod.cmake  FindEigenLAPACK.cmake  FindLibConfig.cmake
notes/: low_rank_smoother.bib  low_rank_smoother.tex  results.tex
python/: analyse.py  autocorrelation.py  generate_measurements.py  multigrid_biharmonic1d.py  pivoted_cholesky.py
python/data/global_measurement/: output_128x128.txt  output_256x256.txt  output_32x32.txt  output_64x64.txt  results.tgz  timeseries128x128_multigridmc.txt  timeseries128x128_ssor.txt  timeseries256x256_multigridmc.txt  timeseries256x256_ssor.txt  timeseries32x32_cholesky.txt  timeseries32x32_multigridmc.txt  timeseries32x32_ssor.txt  timeseries64x64_cholesky.txt  timeseries64x64_multigridmc.txt  timeseries64x64_ssor.txt
python/data/local_measurements/: output_128x128.txt  output_256x256.txt  output_32x32.txt  output_64x64.txt  timeseries128x128_cholesky.txt  timeseries128x128_multigridmc.txt  timeseries128x128_ssor.txt  timeseries256x256_cholesky.txt  timeseries256x256_multigridmc.txt  timeseries256x256_ssor.txt  timeseries32x32_cholesky.txt  timeseries32x32_multigridmc.txt  timeseries32x32_ssor.txt  timeseries64x64_cholesky.txt  timeseries64x64_multigridmc.txt  timeseries64x64_ssor.txt
src/: CMakeLists.txt  action.hh  cholesky_solver.cc  cholesky_solver.hh  config.h.in  diffusion_operator_2d.cc  diffusion_operator_2d.hh  driver.cc  driver_mg.cc  driver_mgmc.cc  driver_spectrum.cc  intergrid_operator.cc  intergrid_operator.hh  iterative_solver.hh  lattice.hh  lattice2d.hh  linear_operator.cc  linear_operator.hh  linear_solver.hh  loop_solver.cc  loop_solver.hh  multigrid_preconditioner.cc  multigrid_preconditioner.hh  operator.hh  preconditioner.hh  sampler.cc  sampler.hh  samplestate.cc  samplestate.hh  smoother.cc  smoother.hh  test.cc  test_cholesky.hh  test_intergrid.hh  test_lattice.hh  test_multigrid.hh  test_sampler.hh  test_smoother.hh  test_solver.hh  vtk_writer.cc  (+1 more)
src/auxilliary/: CMakeLists.txt  cholesky_wrapper.cc  cholesky_wrapper.hh  cholmod_wrapper.cc  cholmod_wrapper.hh  common.cc  common.hh  parallel_random.cc  parallel_random.hh  parameters.cc  parameters.hh  quadrature.cc  quadrature.hh  statistics.cc  statistics.hh  test_cholesky_wrapper.hh  test_cholmod_wrapper.hh  test_quadrature.hh  test_random.hh  test_statistics.hh  vtk_writer.cc  vtk_writer.hh  vtk_writer2d.cc  vtk_writer2d.hh  vtk_writer3d.cc  vtk_writer3d.hh
src/intergrid/: CMakeLists.txt  intergrid_operator.cc  intergrid_operator.hh  intergrid_operator_1dlinear.cc  intergrid_operator_1dlinear.hh  intergrid_operator_2davg.cc  intergrid_operator_2davg.hh  intergrid_operator_2dlinear.cc  intergrid_operator_2dlinear.hh  intergrid_operator_avg.cc  intergrid_operator_avg.hh  intergrid_operator_linear.cc  intergrid_operator_linear.hh  test_intergrid.hh
src/lattice/: CMakeLists.txt  lattice.cc  lattice.hh  lattice1d.cc  lattice1d.hh  lattice2d.cc  lattice2d.hh  lattice3d.cc  lattice3d.hh  test_lattice.hh
src/linear_operator/: CMakeLists.txt  correlationlength_model.cc  correlationlength_model.hh  diffusion_operator.cc  diffusion_operator.hh  diffusion_operator_2d.cc  diffusion_operator_2d.hh  diffusion_operator_3d.cc  diffusion_operator_3d.hh  linear_operator.cc  linear_operator.hh  measured_diffusion_operator.cc  measured_diffusion_operator.hh  measured_operator.cc  measured_operator.hh  shiftedbiharmonic_operator.cc  shiftedbiharmonic_operator.hh  shiftedlaplace_fd_operator.cc  shiftedlaplace_fd_operator.hh  shiftedlaplace_fem_operator.cc  shiftedlaplace_fem_operator.hh  shiftedlaplace_operator.cc  shiftedlaplace_operator.hh  squared_shiftedlaplace_fd_operator.cc  squared_shiftedlaplace_fd_operator.hh  test_linear_operator.hh
src/measurements/: CMakeLists.txt  convergence.cc  convergence.hh  mean_squared_error.cc  mean_squared_error.hh  posterior_statistics.cc  posterior_statistics.hh  sampling_time.cc  sampling_time.hh
src/preconditioner/: CMakeLists.txt  multigrid_preconditioner.cc  multigrid_preconditioner.hh  preconditioner.cc  preconditioner.hh
src/qoi/: CMakeLists.txt  quantityofinterest.cc  quantityofinterest.hh
src/sampler/: CMakeLists.txt  cholesky_sampler.cc  cholesky_sampler.hh  multigridmc_sampler.cc  multigridmc_sampler.hh  sampler.cc  sampler.hh  sor_sampler.cc  sor_sampler.hh  ssor_sampler.cc  ssor_sampler.hh  test_sampler.hh
src/smoother/: CMakeLists.txt  smoother.cc  smoother.hh  sor_smoother.cc  sor_smoother.hh  ssor_smoother.cc  ssor_smoother.hh  test_smoother.hh
src/solver/: CMakeLists.txt  cholesky_solver.cc  cholesky_solver.hh  iterative_solver.cc  iterative_solver.hh  linear_solver.cc  linear_solver.hh  loop_solver.cc  loop_solver.hh  test_solver.hh
